--- a/app/components/Tokens/CreateToken/CreateToken.css
+++ b/app/components/Tokens/CreateToken/CreateToken.css
@@ -1,6 +1,6 @@
 .container {
-    padding: 0px 20px 40px 20px;
-    box-sizing: border-box;
+    position: relative;
+    overflow-y: overlay;
 }
 
 .createContainer {
